# CrazyLander

./: .gitignore  CMakeLists.txt  README.md
ros_workspace/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_workspace/devel/lib/pkgconfig/: aruco_detector.pc
ros_workspace/devel/share/aruco_detector/cmake/: aruco_detectorConfig.cmake
ros_workspace/src/aruco_detector/: CMakeLists.txt  package.xml
ros_workspace/src/aruco_detector/src/: aruco_detector_node.cpp
ros_ws/: camera_calibration_720p.xml
ros_ws/src/aruco_detector/: CMakeLists.txt  package.xml
ros_ws/src/aruco_detector/src/: aruco_detector_node.cpp
ros_ws/src/crazy_controller/: CMakeLists.txt  package.xml
ros_ws/src/crazy_pid/: CMakeLists.txt  package.xml
ros_ws/src/crazy_pid/include/: PID.h
ros_ws/src/crazy_pid/src/: PID.cpp  crazy_pid_node.cpp
src/: main.cpp  tag_generator.cpp
src/crazylander/: main.cpp
